# CasPhy-cuda

./: CMakeLists.txt  fasta2bin.cpp  joinEdgeBitReverse.cu  joinEdgeIndel.cu  nodeKeepBit.cu  nodeKeepIndel.cu  radiusNeighbor.cu  radiusNeighborDNA.cu  readme.RD  readme.md  tipMerge.cu  voteRoot2.cu
examples/: test_truth.tre
